--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     {
         "src":"mini/wsgi.py",
         "use":"@vercel/python",
-        "config":{"maxlambdaSize":"15mb","runtime":"python3.11.3 "}
+        "config":{"maxlambdaSize":"15mb","runtime":"python"}
     },
     {
         "src":"build_files.sh",
