--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,27 @@
 {
-    "version" :2,
-    "builds":
-  [
+  "version": 2,
+  "builds": [
     {
-        "src":"mini/wsgi.py",
-        "use":"@vercel/python",
-        "config":{"maxlambdaSize":"15mb","runtime":"python"}
+      "src": "mini/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-        "src":"build_files.sh",
-        "use":"@vercel/static-build",
-        "config":{"distDir":"staticfiles_build"}
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles_build"
+      }
     }
   ],
-  "routes":[
+  "routes": [
     {
-        "src":"/static/(.*)",
-        "dest":"static/$1"
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
     },
     {
-        "src":"(.*)",
-        "dest":"poll/wsgi.py"
+      "src": "/(.*)",
+      "dest": "mini/wsgi.py"
     }
   ]
 }
